syntax = "proto3";
import "google/protobuf/empty.proto";

message MatchCalendar {
  string id = 1;
  string club_one_name = 2;
  string club_two_name = 3;
  string intend_time = 4;
  string real_time = 5;
  string match_round = 6;
  string match_turn = 7;
  string id_club_one = 8;
  string id_club_two = 9;
  string season = 10;
  string stadium = 11;
  string match_status = 12;
}


message MatchCalendarRequest {
  string id = 1;
}

message StatusRequest {
  string status = 1;
}

message MatchCalendarResponse {
  message Data {
    string club_one_name = 1;
    string club_two_name = 2;
    string intend_time = 3;
    string real_time = 4;
    string match_round = 5;
    string match_turn = 6;
    string stadium = 7;
    string season = 8;
    string match_status = 9;
  }
  Data data = 1;
  string message = 2;
}

message MatchCalendarListResponse {
  repeated MatchCalendarResponse.Data data = 1;
  string message = 2;
}

