syntax = "proto3";

package proto;
import "google/api/annotations.proto";
import "message.proto";
import "match.proto";

service MatchService {
  rpc CreateMatchCalendar (MatchCalendar) returns (MatchCalendarRequest) {
    option (google.api.http) = {
      post: "/match/calendar/{season}"
      body: "*"
    };
  }

  rpc UpdateMatchCalendar (MatchCalendar) returns (MatchCalendarResponse) {
    option (google.api.http) = {
      put: "/match/update_calendar"
      body: "*"
    };
  }
}